# PySnake

./: README.md  pyproject.toml  requirements.txt  snake.py
scripts/: extract_sprites.py
src/: main.py  snake.py
tests/: test_banner_and_level_up.py  test_collision_and_game_over.py  test_food.py  test_snake.py  test_start_restart.py
venv_py311/: pyvenv.cfg
venv_py311/Scripts/: activate  activate.bat
